# weather-collector

./: .gitignore  pyproject.toml  weather.csv
src/weather_collector/: cli.py  client.py  models.py  storage.py
src/weather_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_client.py
