[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-collector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest", "respx"]

[project.scripts]
weather = "weather_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]